# automated_flywheel_setup_checker

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.beads/: config.yaml  issues.jsonl
.github/workflows/: ci.yml  e2e-tests.yml
.ntm/: rate_limits.json
.ntm/pids/: am-automated_flywheel_setup_checker.pid  cm-automated_flywheel_setup_checker.pid
.ntm/summaries/: automated_flywheel_setup_checker-20260406-233507.json
config/: default.toml
scripts/: install-systemd.sh  notify-flywheel-failure.sh  uninstall-systemd.sh
scripts/e2e/: run_all_tests.sh
scripts/e2e/lib/: assertions.sh  helpers.sh
scripts/e2e/tests/: batch_run.sh  (+17 more)
src/: lib.rs  logging.rs  main.rs  server.rs  watchdog.rs
src/checksums/: mod.rs  parser.rs  validator.rs
src/config/: loader.rs  mod.rs  schema.rs
src/parser/: classifier.rs  error.rs  mod.rs
src/remediation/: claude.rs  fallback.rs  mod.rs  prompts.rs  safety.rs
src/reporting/: jsonl.rs  metrics.rs  mod.rs  notify.rs  summary.rs
src/runner/: container.rs  executor.rs  installer.rs  mod.rs  parallel.rs  retry.rs
systemd/: automated-flywheel-checker-emergency.service  automated-flywheel-checker.service  automated-flywheel-checker.timer  logrotate-flywheel-checker
tests/: unit.rs
tests/common/: mod.rs
tests/e2e/: helpers.rs  test_binary_cli.rs  test_classification_pipeline.rs  test_config_workflow.rs  test_docker_integration.rs  test_reporting_output.rs
tests/unit/: checksums_tests.rs  config_tests.rs  mod.rs  notify_tests.rs  parser_tests.rs  remediation_tests.rs  reporting_tests.rs  runner_tests.rs
(+13 files in other folders)
