[package]
name = "automated_flywheel_setup_checker"
version = "0.1.0"
edition = "2021"
authors = ["ACFS Team"]
description = "Automated testing and verification of ACFS installer scripts"
license = "MIT"
repository = "https://github.com/Dicklesworthstone/automated_flywheel_setup_checker"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Docker API
bollard = "0.16"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"
regex = "1"
sha2 = "0.10"
hex = "0.4"
url = "2"
walkdir = "2"
which = "7"
indicatif = "0.17"
rand = "0.9"

[dev-dependencies]
mockall = "0.12"
wiremock = "0.6"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
